cloudformation/jenkins-server.yaml
# Reference: http://beta.awsdocs.com/infrastructure_as_code/cloudformation/applications/jenkins_cf_deployment/

AWSTemplateFormatVersion: "2010-09-09"

Resources:
  JenkinsInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: "{{resolve:ssm:/aws/service/ami-amazon-linux-latest/amzn2-ami-kernel-5.10-hvm-x86_64-gp2}}"
      Tags:
        - Key: "Name"
          Value: "Jenkins_Server"
      SecurityGroups:
        - !Ref JenkinsSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -x
          /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource JenkinsInstance --region ${AWS::Region}
          /opt/aws/bin/cfn-signal -e $? --region ${AWS::Region} --stack ${AWS::StackName} --resource JenkinsInstance
    CreationPolicy:
      ResourceSignal:
        Count: 1
        Timeout: PT15M
    Metadata:
      AWS::CloudFormation::Init:
        config:
          commands:
            01_openjdk_install:
              command: sudo amazon-linux-extras install -y java-openjdk11
            02_jenkins_repo:
              command: sudo wget -O /etc/yum.repos.d/jenkins.repo https://pkg.jenkins.io/redhat-stable/jenkins.repo
            03_jenkins_key:
              command: sudo rpm --import https://pkg.jenkins.io/redhat-stable/jenkins.io.key
            04_jenkins_install:
              command: sudo yum install -y jenkins
          services:
            sysvinit:
              jenkins:
                enabled: true
                ensureRunning: true
  JenkinsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Jenkins_Security_Group"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
